# sim-tooling

./: .gitignore  BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/agents/: card-index.json
docs/diagrams/src/: README.md
docs/humans/: README.md
src/: cardspine.rs  cardspine_state.rs  citizenize.rs  content_digest.rs  crate_catalog.rs  crate_catalog_manifest.rs  dispatch.rs  docencoder.rs  file_size_gate.rs  generated_artifact.rs  generated_namespace.rs  generator_options.rs  index_anchor_scan.rs  index_author.rs  index_author_tests.rs  index_check.rs  index_doctor.rs  index_find.rs  index_find_tests.rs  index_fixpoint.rs  index_fixpoint_tests.rs  index_fragment.rs  index_merge.rs  index_merge_tests.rs  index_overlap.rs  index_overlap_report.rs  index_overlap_tests.rs  index_render.rs  index_render_features.rs  index_render_frameworks.rs  index_render_tests.rs  index_route.rs  index_rules.rs  index_rules_tests.rs  index_seed.rs  index_snapshot.rs  index_source.rs  index_specimen_scan.rs  index_surface_scan.rs  index_vault.rs  (+23 more)
src/atelier/: capsule.rs  capsule_tests.rs  cassette.rs  cli.rs  eval.rs  eval_tests.rs  guard.rs  guard_scan.rs  guard_tests.rs  index.rs  index_doc.rs  index_graph_units.rs  index_manifest.rs  index_tests.rs  index_units.rs  io.rs  mod.rs  radar.rs  radar_tests.rs  rust.rs  rust_metadata.rs  rust_tests.rs  shell.rs  shell_tests.rs  site.rs  tests.rs  tools.rs  tools_tests.rs
src/atelier/guard_scan/: files.rs  rules.rs
src/atelier/radar/: cli.rs  render.rs  score.rs
src/atelier/shell/: cli.rs  contract_native.rs  render.rs
src/atelier/tools/: cli.rs  render.rs
src/citizenize/: command.rs  deps.rs  edit.rs  parser.rs  tests.rs
tests/: dispatch.rs
