[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Repository maintenance tasks."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace]
resolver = "3"
members = [
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
serde_json = "1"
sha2 = "0.10"
sim-cookbook = "0.1.3"
sim-codec-index = { version = "0.1.0", git = "https://github.com/sim-nest/sim-codecs", rev = "04bf63cb6fe0efa9a0055c1bb4b7b946ee5cf213" }
sim-codec-json = "0.1.2"
sim-index-core = { version = "0.1.0", git = "https://github.com/sim-nest/sim-foundation", rev = "06171b91cb489e2dde42ed94bce883f3e0380f61" }
sim-kernel = "0.1.0"
sim-lib-net-core = "0.1.4"
syn = { version = "2", features = ["full"] }
toml = "0.8"

[lints]
workspace = true
