[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Repository maintenance tasks."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace]
resolver = "3"
members = [
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
serde_json = "1"
sha2 = "0.10"
sim-cookbook = "0.1.3"
sim-codec-index = { version = "0.1.0", git = "https://github.com/sim-nest/sim-codecs", rev = "640a6b971d6a82ae1e5227946f8b9c33f045bfc5" }
sim-codec-json = "0.1.2"
sim-index-core = { version = "0.1.0", git = "https://github.com/sim-nest/sim-foundation", rev = "2a21489801376b667e794bf6598357c4622ac20f" }
sim-kernel = "0.1.0"
sim-lib-net-core = "0.1.4"
syn = { version = "2", features = ["full"] }
toml = "0.8"

[lints]
workspace = true
