[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Repository maintenance tasks."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace]
resolver = "3"
members = [
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-tooling"
homepage = "https://github.com/sim-nest/sim-tooling"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
serde_json = "1"
sha2 = "0.11"
sim-cookbook = "0.1.3"
sim-codec-index = { version = "0.1.0", git = "https://github.com/sim-nest/sim-codecs", rev = "950d8c3cadccdbe9d2d9bfe8c90b67d1bbd358b1" }
sim-codec-json = "0.1.2"
sim-index-core = { version = "0.1.0", git = "https://github.com/sim-nest/sim-foundation", rev = "d11442dccfb66699bb644f7c1074be19449112c8" }
sim-kernel = "0.1.0"
sim-lib-net-core = "0.1.4"
syn = { version = "3", features = ["full"] }
toml = "1.1"

[lints]
workspace = true
